Internationalized source code. WIP Event details.

--- a/Resources/Localizations/en.lproj/Localizable.strings
+++ b/Resources/Localizations/en.lproj/Localizable.strings
@@ -5,14 +5,32 @@
   Created by Alexis Kinsella on 23/11/2013.
   Copyright (c) 2013 Xebia. All rights reserved.
 */
-"Pull to refresh"="Pull to refresh";
+"Pull to refresh..."="Pull to refresh...";
 "Last Updated: %@"="Last Updated: %@";
 "Release to refresh..."="Release to refresh...";
 "Loading..."="Loading...";
 "Cellular"="Cellular";
-"Wifi"="Wifi";
+"WIFI"="WIFI";
 "No Connection"="No Connection";
 "Settings"="Settings";
 "Mail not configured"="Mail not configured";
 "This device is not configured for sending Email. Please configure the Mail settings in the Settings app."="This device is not configured for sending Email. Please configure the Mail settings in the Settings app.";
 "OK"="OK";
+"Error during loading"="Error during loading";
+"Cards"="Cards";
+"Categories"="Categories";
+"Events"="Events";
+"Error"="Errors";
+"No action for URL"="No action for URL";
+"Timeline"="Timeline";
+"Tweets"="Tweets";
+"Error"="Error";
+"No URL available for video"="No URL available for video";
+"Validate"="Validate";
+"Videos"="Videos";
+"Authors"="Authors";
+"Posts"="Posts";
+"Blog"="Blog";
+"Tags"="Tags";
+"By"="By";
+"read(s)"="read(s)";
