--- a/Resources/Localizations/fr.lproj/Localizable.strings
+++ b/Resources/Localizations/fr.lproj/Localizable.strings
@@ -43,3 +43,10 @@
 "Close"="Fermer";
 "Map"="Plan";
 "Back"="Retour";
+"Speakers" = "Speakers";
+"Tracks" = "Tracks";
+"Rooms" = "Salles";
+"My ratings" = "Mes notes";
+"Loading error" = "Erreur de chargement";
+"by" = "par";
+"Rate this" = "Donnez une note à cette présentation";
