Fixed people representation

--- a/Resources/Localizations/en.lproj/Localizable.strings
+++ b/Resources/Localizations/en.lproj/Localizable.strings
@@ -51,3 +51,4 @@
 "Loading error" = "Oops! Cannot load the conference list.";
 "by" = "by";
 "Rate this" = "Rate this talk";
+"persons" = "persons";
