--- a/Resources/Localizations/fr.lproj/Localizable.strings
+++ b/Resources/Localizations/fr.lproj/Localizable.strings
@@ -50,3 +50,4 @@
 "Loading error" = "Erreur de chargement";
 "by" = "par";
 "Rate this" = "Donnez une note à cette présentation";
+"persons" = "personnes";
