Changed conference rating endpoints

--- a/Resources/Localizations/en.lproj/Localizable.strings
+++ b/Resources/Localizations/en.lproj/Localizable.strings
@@ -53,3 +53,4 @@
 "Rate this" = "Rate this talk";
 "persons" = "persons";
 "Done"="Done";
+"Please vote by choosing a rating from 1 to 5" = "Please vote by choosing a rating from 1 to 5";
