--- a/Resources/Localizations/fr.lproj/Localizable.strings
+++ b/Resources/Localizations/fr.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "Rate this" = "Donnez une note à cette présentation";
 "persons" = "personnes";
 "Done"="Fermer";
+"Please vote by choosing a rating from 1 to 5" = "SVP votez en choisissant une note de 1 à 5";
