Added track colours

--- a/Resources/Localizations/en.lproj/Localizable.strings
+++ b/Resources/Localizations/en.lproj/Localizable.strings
@@ -54,3 +54,4 @@
 "persons" = "persons";
 "Done"="Done";
 "Please vote by choosing a rating from 1 to 5" = "Please vote by choosing a rating from 1 to 5";
+"%@ from %@ to %@" = "%@ from %@ to %@";
