Fixed rating translation

--- a/Resources/Localizations/fr.lproj/Localizable.strings
+++ b/Resources/Localizations/fr.lproj/Localizable.strings
@@ -46,7 +46,7 @@
 "Speakers" = "Speakers";
 "Tracks" = "Tracks";
 "Rooms" = "Salles";
-"My ratings" = "Mes notes";
+"My ratings" = "Mes votes";
 "Loading error" = "Erreur de chargement";
 "by" = "par";
 "Rate this" = "Donnez une note à cette présentation";
