Multiple fixes and improvments ont conference part

--- a/Resources/Localizations/en.lproj/Localizable.strings
+++ b/Resources/Localizations/en.lproj/Localizable.strings
@@ -28,6 +28,8 @@
 "No URL available for video"="No URL available for video";
 "Validate"="Validate";
 "Videos"="Videos";
+"Xebia Essentials"="Xebia Essentials";
+"Conferences"="Conferences";
 "Authors"="Authors";
 "Posts"="Posts";
 "Blog"="Blog";
