--- a/Resources/Localizations/fr.lproj/Localizable.strings
+++ b/Resources/Localizations/fr.lproj/Localizable.strings
@@ -28,6 +28,8 @@
 "No URL available for video"="Pas d'url disponible pour la video";
 "Validate"="Valider";
 "Videos"="Vidéos";
+"Xebia Essentials"="Xebia Essentials";
+"Conferences"="Conférences";
 "Authors"="Auteurs";
 "Posts"="Posts";
 "Blog"="Blog";
